<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.asus.liangpinstore.ui.activity.LoginActivity">

    <include layout="@layout/layout_tool_fragment" />

    <ImageView
        android:id="@+id/login_icon"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/login_icon"
        android:scaleType="fitXY"
        android:layout_marginBottom="52px"
        android:layout_marginTop="150px"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/autoRe"
            android:layout_below="@+id/login_icon"
            android:layout_centerHorizontal="true"
            android:layout_width="562px"
            android:layout_height="84px"
            android:background="@drawable/edit_login_background">
            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                android:layout_marginStart="32px"
                android:src="@mipmap/login_user"/>

            <EditText
                android:id="@+id/user_phone"
                android:layout_width="450px"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/user_icon"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/login_hin"
                android:maxLines="1"
                android:numeric="integer"
                android:textColor="@color/center_textColor"
                android:textCursorDrawable="@drawable/edit_cursor_color"
                android:textSize="16.5sp" />

        </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/auto_pwd"
        android:layout_below="@+id/autoRe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30px"
        android:layout_width="562px"
        android:layout_height="84px"
        android:background="@drawable/edit_login_background">

        <ImageView
            android:id="@+id/pwd_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_marginStart="32px"
            android:layout_centerVertical="true"
            android:src="@mipmap/pwd" />

        <EditText
            android:id="@+id/user_pwd"
            android:layout_toEndOf="@+id/pwd_icon"
            android:layout_width="450px"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="16.5sp"
            android:maxLines="1"
            android:cursorVisible="true"
            android:textColor="@color/center_textColor"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:password="true"
            android:layout_marginStart="20px"
            android:hint="@string/login_pwd"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/auto_text"
        android:layout_below="@+id/auto_pwd"
        android:layout_width="562px"
        android:layout_marginTop="18px"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/go_registe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_to"
            android:padding="5px"
            android:textSize="16.5sp"
            android:textColor="@color/blue"/>
        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pwd"
            android:padding="5px"
            android:textSize="16.5sp"
            android:textColor="@color/blue"
            android:layout_alignParentEnd="true"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_marginTop="58px"
        android:layout_below="@+id/auto_text"
        android:layout_width="562px"
        android:layout_height="84px"
        android:layout_centerHorizontal="true"
        android:text="登陆"
        android:textStyle="bold"
        android:textSize="17.6sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"/>


    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/disanfang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="——————第三方登陆——————"
            android:textSize="16.5sp"
            android:layout_centerHorizontal="true"/>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_below="@+id/disanfang"
            android:layout_width="306px"
            android:layout_marginTop="30px"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/wechat"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:padding="10px"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_wechat"/>
            <ImageView
                android:id="@+id/qq"
                android:layout_weight="1"
                android:padding="10px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_qq"/>
            <ImageView
                android:id="@+id/weibo"
                android:layout_weight="1"
                android:padding="10px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_weibo"/>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoRelativeLayout>



</com.zhy.autolayout.AutoRelativeLayout>
